Fixed the colors contrast of GD widgets in the Footer sidebar.

--- a/assets/css/sass/widgets.scss
+++ b/assets/css/sass/widgets.scss
@@ -1966,6 +1966,7 @@ body #site-footer-widgets.site-footer-section {
         }
         &.geodir_bestof_widget,
         &.geodir_event_listing,
+        &.geodir_related_listing_post_view,
         &.geodir_popular_post_view {
             .geodir_category_list_view {
                 li {
